Fixed tota11y errors for dark mode

--- a/public/css/site-dark.css
+++ b/public/css/site-dark.css
@@ -170,7 +170,7 @@ input:checked + .slider:before {
 }
 .card-title {
   font-size: 19px;
-  color: #0b8a00;
+  color: #3f953d;
 }
 
 .card-text {
@@ -894,7 +894,7 @@ body {
   border-radius: 8px;
   letter-spacing: 0.7px;
   background-color: #142e44;
-  color: #000;
+  color: white;
   font-size: 21px;
   font-family: "Lato", sans-serif;
   cursor: pointer;
@@ -1358,7 +1358,7 @@ body {
 }
 
 #prodPriceSpan {
-  color: #0b8a00;
+  color: #65a664;
 }
 
 .abtCard > h2 {
@@ -1524,4 +1524,8 @@ div.menu2 > .userCard {
 #recProdDiv > h3,
 #recProdDiv > p {
   text-align: center;
+}
+
+.col-sm-9 {
+  color: #92989e;
 }
